--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         <div class="d-flex gap-2">
           <!-- Tombol Login -->
           <button type="submit" class="btn btn-dark d-flex align-items-center gap-1" id="login-button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-shield-lock" viewBox="0 0 16 16">
+              <path d="M5.5 8a1.5 1.5 0 1 1 3 0v1.086a1.5 1.5 0 1 1-3 0V8zm1.5-3a1 1 0 0 0-1 1v1.086a2.5 2.5 0 1 0 2 0V6a1 1 0 0 0-1-1z"/>
+              <path d="M8 0c-.69 0-1.37.116-2.015.337a4.992 4.992 0 0 0-1.63.965C3.373 2.088 2.25 3.375 1.56 5.001a9.26 9.26 0 0 0-.498 2.662c0 3.122 1.597 5.563 3.578 6.92C6.382 15.773 7.176 16 8 16s1.618-.227 2.36-.417c1.981-1.356 3.578-3.797 3.578-6.92a9.26 9.26 0 0 0-.498-2.662c-.69-1.626-1.813-2.913-2.795-3.699a4.992 4.992 0 0 0-1.63-.965A6.52 6.52 0 0 0 8 0z"/>
+            </svg>
+            Login
           </button>
 
           <!-- Tombol Dashboard -->
