--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Laporan Kinerja Harian</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
     .card-sesi {
@@ -63,27 +62,30 @@
     <div id="form-wrapper" style="display:none;">
       <!-- Card Info Pegawai -->
       <div class="card mb-4">
-        <div class="card-body">
-  <h5 class="card-title mb-3">
-    <i class="bi bi-person-vcard-fill me-2"></i> Informasi Pegawai
-  </h5>
-
+       <div class="card-body">
+  <h5 class="card-title mb-3">Informasi Pegawai</h5>
   <div class="row mb-2">
-    <div class="col-4 col-md-3 fw-bold">
-      <i class="bi bi-person-badge me-1 text-primary"></i> NIP
-    </div>
-    <div class="col-8 col-md-9">
-      <span class="badge bg-secondary" id="nip"></span>
-    </div>
+    <div class="col-4 col-md-3 fw-bold">NIP</div>
+    <div class="col-8 col-md-9" id="nip"></div>
   </div>
-
   <div class="row mb-2">
-    <div class="col-4 col-md-3 fw-bold">
-      <i class="bi bi-diagram-3 me-1 text-success"></i> Sub Bidang
-    </div>
-    <div class="col-8 col-md-9">
-      <span class="badge bg-info text-dark" id="subbid"></span>
-    </div>
+    <div class="col-4 col-md-3 fw-bold">Sub Bidang</div>
+    <div class="col-8 col-md-9" id="subbid"></div>
+  </div>
+  <div class="row mb-2">
+    <div class="col-4 col-md-3 fw-bold">Status Kepegawaian</div>
+    <div class="col-8 col-md-9" id="status"></div>
+  </div>
+  <div class="row mb-2">
+    <div class="col-4 col-md-3 fw-bold">Golongan</div>
+    <div class="col-8 col-md-9" id="golongan"></div>
+  </div>
+  <div class="row">
+    <div class="col-4 col-md-3 fw-bold">Jabatan</div>
+    <div class="col-8 col-md-9" id="jabatan"></div>
+  </div>
+</div>
+
   </div>
 
   <div class="row mb-2">
