--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <div class="container py-5">
     <!-- Header dengan Judul dan Deskripsi Panduan -->
     <header class="text-center mb-5">
-      <h1 class="display-4">Laporan Kinerja Pegawai</h1>
-      <p class="lead">Sistem laporan harian untuk mencatat aktivitas pegawai setiap hari. Pilih nama, masukkan PIN, dan kirimkan laporan sesi Anda dengan mengisi uraian pekerjaan dan mengunggah bukti dukung.</p>
+      <h1 class="display-4">SiPeKaH</h1>
+      <p class="lead">Sistem Pelaporan Kinerja Harian Pegawai</p>
     </header>
 
     <div class="container my-4">
