--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         flex-direction: column;
       }
     }
-        /* tulis CSS kamu di sini */
-    #dashboard-button {
-      display: none;
-    }
+     #dashboard-button[aria-disabled="true"] {
+  pointer-events: none;     /* Tidak bisa diklik */
+  opacity: 0.5;             /* Tampak disabled */
+  cursor: not-allowed;
+  user-select: none;
+  text-decoration: none;    /* Hapus underline jika ada */
+}
   </style>
 </head>
 <body>
@@ -53,14 +56,14 @@
           <!-- Tombol Dashboard, awalnya disembunyikan -->
 <a href="https://lookerstudio.google.com/reporting/xyz" target="_blank" 
    class="btn btn-success d-flex align-items-center gap-1" 
-   id="dashboard-button" style="display:none;">
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bar-chart-line" viewBox="0 0 16 16">
+   id="dashboard-button" aria-disabled="true" tabindex="-1">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" 
+       class="bi bi-bar-chart-line" viewBox="0 0 16 16">
     <path d="M0 0h1v15h15v1H0V0z"/>
     <path d="M10 10h1v3h-1v-3zM7 6h1v7H7V6zM4 9h1v4H4V9z"/>
   </svg>
   Dashboard
 </a>
-
         </div>
       </form>
     </div>
